tests/snapshots/examples_fixtures/errors__invalid_pattern_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/invalid_pattern_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E016]: Invalid Pattern

Catch-all patterns must be the final match arm.

  examples/errors/invalid_pattern_error.flx:3:5
  |
3 |     _ -> 1,
  |     ^

Hint:
  Move `_` or the binding pattern to the last arm.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^
  | -------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 4 errors.
== stdout ==
<not executed>
