tests/snapshots/examples_fixtures/errors__invalid_pattern_syntax_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/invalid_pattern_syntax_error.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E020]: Invalid Pattern

Expected a pattern, found `+`.

  examples/errors/invalid_pattern_syntax_error.flx:3:5
  |
3 |     + -> 1,
  |     ^


Error[E031]: Expected Expression

Expected expression, found `;`.

  examples/errors/invalid_pattern_syntax_error.flx:4:2
  |
4 | };
  |  ^

Found 2 errors.
== stdout ==
<not executed>
