tests/snapshots/examples_fixtures/errors__match_guard_syntax_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/match_guard_syntax_error.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E031]: Expected Expression

Expected expression, found `->`.

  examples/errors/match_guard_syntax_error.flx:5:16
  |
5 |     Some(v) if -> v,
  |                ^^

Note:
  while parsing `match` expression


Error[E031]: Expected Expression

Expected expression, found `;`.

  examples/errors/match_guard_syntax_error.flx:7:2
  |
7 | };
  |  ^

Note:
  while parsing `match` expression

Found 2 errors.
== stdout ==
<not executed>
