tests/snapshots/examples_fixtures/errors__module_and_script_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/module_and_script_error.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Data.MyFile` to import.

  examples/errors/module_and_script_error.flx:1:1
  |
1 | import Modules.Data.MyFile
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Data.MyFile.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Data.MyFile` under roots: examples/errors, lib, src (imported from examples/errors/module_and_script_error.flx).
== stdout ==
<not executed>
