tests/snapshots/examples_fixtures/errors__module_invalid_content_import_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/module_invalid_content_import_error.flx
== compile ==
failed (module)
== diagnostics ==
Error[E018]: Import Not Found

Cannot find module `Errors.ModuleInvalidContentError` to import.

  examples/errors/module_invalid_content_import_error.flx:3:1
  |
3 | import Errors.ModuleInvalidContentError
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Errors.ModuleInvalidContentError.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Errors.ModuleInvalidContentError` under roots: examples/errors, src (imported from examples/errors/module_invalid_content_import_error.flx).
== stdout ==
<not executed>
