tests/snapshots/examples_fixtures/errors__module_scope_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/module_scope_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
