tests/snapshots/examples_fixtures/errors__pattern_validation_error_path.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/pattern_validation_error_path.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/errors/pattern_validation_error_path.flx:9:1
   |
 9 | print(match value {
   | ^^^^^^^^^^^^^^^^^^^
10 |     _ -> "any",
   | ^^^^^^^^^^^^^^^
11 |     2 -> "two",
   | ^^^^^^^^^^^^^^^
12 | });
   | ^^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/errors/pattern_validation_error_path.flx:9:1
   |
 9 | print(match value {
   | ^^^^^^^^^^^^^^^^^^^
10 |     _ -> "any",
   | ^^^^^^^^^^^^^^^
11 |     2 -> "two",
   | ^^^^^^^^^^^^^^^
12 | });
   | ^^^

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E016]: INVALID PATTERN

Catch-all patterns must be the final match arm.

  --> examples/errors/pattern_validation_error_path.flx:10:5
   |
10 |     _ -> "any",
   |     ^

Hint:
  Move `_` or the binding pattern to the last arm.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/errors/pattern_validation_error_path.flx:14:1
   |
14 | print(match value {
   | ^^^^^^^^^^^^^^^^^^^
15 |     1 -> "one",
   | ^^^^^^^^^^^^^^^
16 |     2 -> "two",
   | ^^^^^^^^^^^^^^^
17 | });
   | ^^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match is non-exhaustive without an unguarded catch-all arm.

  --> examples/errors/pattern_validation_error_path.flx:14:7
   |
14 | print(match value {
   |       ^^^^^^^^^^^^^
15 |     1 -> "one",
   | ^^^^^^^^^^^^^^^
16 |     2 -> "two",
   | ^^^^^^^^^^^^^^^
17 | });
   | ^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/errors/pattern_validation_error_path.flx:19:1
   |
19 | print(match value { });
   | ^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E014]: EMPTY MATCH

Match expression must have at least one arm.

  --> examples/errors/pattern_validation_error_path.flx:19:7
   |
19 | print(match value { });
   |       ^^^^^^^^^^^^^^^

Hint:
  Add at least one pattern match arm: match value { pattern -> expr; }


--> compiler error[E015]: NON-EXHAUSTIVE MATCH

Match is non-exhaustive without an unguarded catch-all arm.

  --> examples/errors/pattern_validation_error_path.flx:19:7
   |
19 | print(match value { });
   |       ^^^^^^^^^^^^^^^

Hint:
  Add an unguarded `_ -> ...` arm for conservative exhaustive coverage.

Found 8 errors.
== stdout ==
<not executed>
